force-app/main/default/objects/BIP_Request__c/BIP_Request__c.object-meta.xml
<CustomObject>
    <label>BIP Request</label>
    <nameField>
        <displayFormat>BIP-{0000}</displayFormat>
        <label>BIP Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BIP Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>