force-app/main/default/objects/BIP_Request__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>