force-app/main/default/objects/BIP_Request__c/fields/BIP_Number__c.field-meta.xml
<CustomField>
    <fullName>BIP_Number__c</fullName>
    <label>BIP Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>