force-app/main/default/objects/BIP_Request__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MITEI</fullName>
            </value>
            <value>
                <fullName>IBM Watson</fullName>
            </value>
            <value>
                <fullName>Lincoln Labs</fullName>
            </value>
            <value>
                <fullName>Smart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>