force-app/main/default/objects/BIP_Request__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;Details&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Details</label>
    <type>Text</type>
</CustomField>