force-app/main/default/objects/BIP_Request__c/fields/email_CCs__c.field-meta.xml
<CustomField>
    <fullName>email_CCs__c</fullName>
    <label>CC Correspondence</label>
    <type>TextArea</type>
</CustomField>