force-app/main/default/objects/BIP_Request__c/fields/Forrester_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Forrester_Sponsor__c</fullName>
    <label>Forrester_Sponsor</label>
    <length>255</length>
    <referenceTo>Forrester_Sponsor__x</referenceTo>
    <relationshipLabel>BIP Requests</relationshipLabel>
    <relationshipName>BIP_Requests</relationshipName>
    <type>ExternalLookup</type>
</CustomField>