force-app/main/default/objects/BIP_Request__c/fields/Is_Due_Date_Approaching__c.field-meta.xml
<CustomField>
    <fullName>Is_Due_Date_Approaching__c</fullName>
    <description>Flag to show if Due Date is approaching within the next x days</description>
    <formula>Due_Date__c &gt;= TODAY() &amp;&amp; Due_Date__c &lt;= TODAY() + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag to show if Due Date is approacing within the next x days</inlineHelpText>
    <label>Is Due Date Approaching</label>
    <type>Checkbox</type>
</CustomField>