force-app/main/default/objects/BIP_Request__c/fields/Lead_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Unit_ID__c</fullName>
    <label>Lead Unit ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>