force-app/main/default/objects/BIP_Request__c/fields/Lead_Unit_Nam__c.field-meta.xml
<CustomField>
    <fullName>Lead_Unit_Nam__c</fullName>
    <label>Lead Unit Nam</label>
    <length>100</length>
    <type>Text</type>
</CustomField>