force-app/main/default/objects/BIP_Request__c/fields/OSP_Contact__c.field-meta.xml
<CustomField>
    <fullName>OSP_Contact__c</fullName>
    <label>OSP Contact</label>
    <type>TextArea</type>
</CustomField>