force-app/main/default/objects/BIP_Request__c/fields/Parent_BIP__c.field-meta.xml
<CustomField>
    <fullName>Parent_BIP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent BIP</label>
    <referenceTo>BIP_Request__c</referenceTo>
    <relationshipLabel>BIP Requests</relationshipLabel>
    <relationshipName>BIP_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>