force-app/main/default/objects/BIP_Request__c/fields/Primary_PI__c.field-meta.xml
<CustomField>
    <fullName>Primary_PI__c</fullName>
    <label>Primary PI Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>