force-app/main/default/objects/BIP_Request__c/fields/Primary_PI_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_PI_Email__c</fullName>
    <formula>Primary_PI_Lookup__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary PI Email</label>
    <type>Text</type>
</CustomField>