force-app/main/default/objects/BIP_Request__c/fields/Primary_PI_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Primary_PI_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary PI</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BIP Requests (Primary PI Lookup)</relationshipLabel>
    <relationshipName>BIP_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>