force-app/main/default/objects/BIP_Request__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <label>Project Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>