force-app/main/default/objects/BIP_Request__c/fields/Proposal_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Activity_Type__c</fullName>
    <label>Proposal Activity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>