force-app/main/default/objects/BIP_Request__c/fields/Proposal_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Deadline_Date__c</fullName>
    <label>Proposal Deadline Date</label>
    <type>Date</type>
</CustomField>