force-app/main/default/objects/BIP_Request__c/fields/Proposal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_End_Date__c</fullName>
    <label>Proposal End Date</label>
    <type>Date</type>
</CustomField>