force-app/main/default/objects/BIP_Request__c/fields/Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Number__c</fullName>
    <label>Proposal Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>