force-app/main/default/objects/BIP_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
            <value>
                <fullName>Non-MIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>