force-app/main/default/objects/BIP_Request__c/fields/Requestor_Department__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Department__c</fullName>
    <formula>Requestor_Name__r.PersonContact.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Department</label>
    <type>Text</type>
</CustomField>