force-app/main/default/objects/BIP_Request__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requestor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please use Person Account only</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BIP Requests</relationshipLabel>
    <relationshipName>BIP_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>