force-app/main/default/objects/BIP_Request__c/fields/Sponsor_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name_Text__c</fullName>
    <label>Sponsor Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>