force-app/main/default/objects/BIP_Request__c/fields/Sponsor_Type__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Type__c</fullName>
    <label>Sponsor Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>