force-app/main/default/objects/BIP_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Received</fullName>
                <default>true</default>
                <label>Request Received</label>
            </value>
            <value>
                <fullName>Assigned to TLO</fullName>
            </value>
            <value>
                <fullName>Pending Assignment</fullName>
            </value>
            <value>
                <fullName>Assigned to PI</fullName>
            </value>
            <value>
                <fullName>PI Review Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending Feedback</fullName>
            </value>
            <value>
                <fullName>Feedback Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>