force-app/main/default/objects/BIP_Request__c/fields/TLO_Officer_Email__c.field-meta.xml
<CustomField>
    <fullName>TLO_Officer_Email__c</fullName>
    <label>Primary TLO Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>