force-app/main/default/objects/BIP_Request__c/fields/TLO_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>TLO_Officer_Name__c</fullName>
    <label>Primary TLO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>