force-app/main/default/objects/BIP_Request__c/recordTypes/KC_Proposal.recordType-meta.xml
<RecordType>
    <fullName>KC_Proposal</fullName>
    <active>true</active>
    <label>KC Proposal</label>
</RecordType>