force-app/main/default/objects/BIP_Request__c/recordTypes/KC_Proposal_Child.recordType-meta.xml
<RecordType>
    <fullName>KC_Proposal_Child</fullName>
    <active>true</active>
    <label>KC Proposal Child</label>
</RecordType>