force-app/main/default/objects/BIP_Request__c/recordTypes/Non_KC_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Non_KC_Proposal</fullName>
    <active>true</active>
    <label>Non-KC Proposal</label>
</RecordType>