force-app/main/default/objects/BIP_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Requestor_Name__c</columns>
    <columns>Proposal_Number__c</columns>
    <columns>Primary_PI_Lookup__c</columns>
    <columns>TLO_Officer_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>